# minecraft-clone

./: .gitignore  CMakeLists.txt  build.sh  clean.sh  run.sh
assets/shaders/: base.vs  cube.fs  cube.vs  cube_shadowmap.fs  cube_shadowmap.vs  mesh.fs  mesh.vs  skybox.fs  skybox.vs
include/glad/: gl.h  glad.h
src/: Context.cpp  GameView.hpp  Transform.h  game_view.hpp  glad.c  main.cpp
src/engine/: Context.cpp  Context.hpp  Framebuffer.cpp  Framebuffer.hpp  Frustum.cpp  Frustum.hpp  Program.h  Singleton.hpp  Texture.cpp  Texture.hpp  TextureManager.hpp  Transform.h  VAO.cpp  VAO.hpp  camera.hpp  command_line_args.cpp  command_line_args.h  context.cpp  context.hpp  framebuffer.cpp  framebuffer.hpp  geometry.hpp  gl.c  loadTexture.hpp  load_texture.hpp  program.h  texture.cpp  texture.hpp  type.h  view.hpp
src/engine/camera/: Camera.cpp  FpsCamera.cpp  FpsCamera.hpp  OrbitCamera.cpp  OrbitCamera.hpp  camera.cpp  camera.hpp  fps_camera.cpp  fps_camera.hpp  orbit_camera.cpp  orbit_camera.hpp
src/game/: BlockTextureManager.cpp  BlockTextureManager.hpp  Entity.cpp  Entity.hpp  Shadowmap.cpp  Shadowmap.hpp  Tchat.cpp  Tchat.hpp  TextureManager.cpp  ThreadPool.cpp  ThreadPool.h  ThreadPool.hpp  chunk.cpp  chunk.hpp  chunk_extra.hpp  chunk_mesh.cpp  chunk_mesh.hpp  client.cpp  client.hpp  entity.cpp  entity.hpp  enums.cpp  enums.hpp  shadow_map.cpp  shadow_map.hpp  task_queue.cpp  task_queue.hpp  texture_manager.cpp  texture_manager.hpp  thread_pool.cpp  thread_pool.hpp  world.cpp  world.hpp  world_renderer.cpp  world_renderer.hpp
src/game/Client/: client.cpp  client.hpp
src/game/Client/Packets/: ClientPacket.hpp  ServerPacket.hpp
src/game/network/Client/: Client.cpp  Client.hpp
src/game/network/Client/Packets/: ClientPacket.hpp  ServerPacket.hpp
src/game/scenes/: GameView.cpp  GameView.hpp  game_view.cpp  game_view.hpp
src/game/world/: BlockRaycastHit.hpp  BufferAllocator.cpp  BufferAllocator.hpp  Chunk.cpp  Chunk.hpp  ChunkExtra.hpp  ChunkMesh.cpp  ChunkMesh.hpp  World.cpp  World.hpp  WorldRenderer.cpp  WorldRenderer.hpp  chunk.cpp  chunk.hpp  chunk_extra.hpp  chunk_mesh.cpp  chunk_mesh.hpp  world.cpp  world.hpp
src/utils/: ByteBuffer.h  ByteBuffer.hpp  byte_manipulation.hpp  clock.h  clock.hpp  lerp.h  lerp.hpp  print_buffer.hpp  recv_full.h  string_helpers.hpp
